tests/coverage/misc/fail/negative/truncation/008_optional_chain_eof.js
// Expected error: unterminated optional chain.
value?.
